resources/uploadWizard.css
/* ... */
.mwe-upwiz-thanks {
	margin-bottom: 2em;
}

/* may change in RTL */
.mwe-upwiz-required-field {
	/* font-weight: bold; */
}

.mwe-upwiz-required-marker {
	color: #ff0000;
}

.mwe-readonly {
	background-color: #ffffff;
	padding: 0.25em;
}

.mwe-date {
	width: 20em;
	/* @embed */
	background: #ffffff url('images/calendar.gif') no-repeat right center;
}

.ui-datepicker-current-day a.ui-state-active {
	background: #ffff99;
}

.mwe-upwiz-hint {
    /* @embed */
    background: url('images/question.png') no-repeat;
    display: inline-block;
    height: 11px;
    width: 11px;
    margin-left: 4px;
}
.mwe-upwiz-hint:hover {
    /* @embed */
    background: url('images/question-hover.png') no-repeat;
}

/* Hack for Explorer 6 and 7 - line up buttons with other content */
.mwe-upwiz-buttons .ui-button, .cat-widget .ui-button {
	*vertical-align: middle;
}

#upload-wizard .ui-corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; }
#upload-wizard .ui-corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
#upload-wizard .ui-corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
#upload-wizard .ui-corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
#upload-wizard .ui-corner-top { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
#upload-wizard .ui-corner-bottom { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
#upload-wizard .ui-corner-right {  -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
#upload-wizard .ui-corner-left { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
#upload-wizard .ui-corner-all { -moz-border-radius: 4px; -webkit-border-radius: 4px; }

.mwe-upwiz-deed-license-group-subhead {
	color: #797979;
	margin-top: 0em;
	margin-bottom: 0em;
}

.ui-dialog .mwe-upwiz-lightbox {
	padding: 0;
}

.mwe-upwiz-details-texts {
	padding: 0.5em;
}

